Fri Feb  2 00:41:29 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>

 - megatec_usb: merged some of Jon Gough's changes: added Ablerex
   communication subdriver routines. These still need to be fine-tuned
   and perhaps combined with the Krauler ones.

Thu Feb  1 18:27:03 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>

 - megatec_usb: merged Alexander I. Gordeev's changes (nut-upsdev,
   Jan 23, 2007), and resolved conflicts. Decide whether to use
   serial or USB backend at link-time, not run-time. (No changes to
   original megatec.c needed). Support for Krauler device.
	
Thu Feb  1 18:27:03 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>

 - megatec_usb: applied Andrey Lelikov's original patch (nut-upsdev,
   Dec 5, 2006), and resolved conflicts.
	
Tue Jan 30 16:00:54 UTC 2007 / Niels Baggesen <nba@users.sourceforge.net>

 - drivers/tripplite-hid.c: #include main.h to get prototype for getval

Tue Jan 30 15:55:44 UTC 2007 / Niels Baggesen <nba@users.sourceforge.net>

 - snmp-ups.[ch]: implement already documented snmp_version parameter

Mon Jan 29 17:28:46 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - server/upsd.c: trimming trailing '\n' from 'ans' in debug code had a bad
   side effect (clients wouldn't work anymore), fixing it

Mon Jan 29 06:15:45 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>

 - data/driver.list: removed "experimental" from Tripplite SmartOnline
   SU1500RTXL2ua, as it has been tested (thanks to Patrick Krepps).
 - usbhid-ups.c: added missing "else" case, to fix spurious "base
   variable does not exist" error.

Sun Jan 28 20:08:14 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - data/driver.list: recent Sweex UPS'es are compatible with the 'megatec'
   driver (unfortunately, there is no way to tell if you have a recent
   model)

Sun Jan 28 15:34:02 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - server/sstate.c: added some debug statements for sstate_dead() so that