@@ -1,3 +1,8 @@
+Thu Feb  8 15:26:37 UTC 2007 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>
+
+ - drivers/megatec_usb.c: fixed "UPS No Ack" issue and optimized
+   get_data_krauler. Also did some code reformatting.
+
 Fri Feb  2 00:41:29 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>
 
  - megatec_usb: merged some of Jon Gough's changes: added Ablerex
